[project]
name = "python-examples"
version = "0.1.0"
description = "examples of common python libs"
authors = [
    {name = "James Campbell"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pysocks>=1.7.1",
    "rethinkdb>=2.4.10",
    "quandl>=3.7.0",
    "nltk>=3.9.1",
    "exifread>=3.0.0",
    "blockchain>=1.4.4",
    "websockify>=0.11.0",
    "shodan>=1.31.0",
    "urllib3>=2.6.0",
    "fuzzywuzzy>=0.18.0",
    "scrapy>=2.13.4",
    "pytest>=8.3.0",
    "termcolor>=2.4.0",
    "pycld2>=0.41",
    "polyglot>=16.7.4",
    "tika>=2.6.0",
    "pyzillow>=0.7.0",
    "geotext>=0.4.0",
    "tabulate>=0.9.0",
    "tqdm>=4.66.4",
    "redis>=5.0.4",
    "psycopg2-binary>=2.9.9",
    "pypdf2>=3.0.1",
    "pinboard>=2.1.9",
    "webdriver-manager>=4.0.2",
    "scapy>=2.7.0",
    "matplotlib>=3.9.0",
    "iptcinfo3>=2.1.4",
    "requests>=2.31.0",
    "lxml>=5.2.0",
    "pillow>=10.3.0",
    "numpy>=1.26.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    # LLM/AI Libraries
    "openai>=1.59.0",
    "anthropic>=0.42.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "instructor>=1.7.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pip-audit>=2.9.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
"python_examples" = ["*"]
